# Thermal-UDP-Stream

./: .gitignore  README.md
firmware/hello_board/: CMakeLists.txt  sdkconfig  sdkconfig.old
firmware/hello_board/.cache/clangd/index/: MLX90640_API.c.B2AC060C89344E84.idx  MLX90640_API.h.C18B55CCF486D1B4.idx  MLX90640_I2C_Driver.h.008844CD29EA9F79.idx  camera_i2c.c.9B7C93B8BCA0F34A.idx  camera_i2c.c.A80830A7ACA21204.idx  camera_i2c.h.A53E14D019B58025.idx  camera_i2c.h.C6F5F51EE7774534.idx  led.c.457770CCB68547D4.idx  led.c.F870D4FD6E55EEC4.idx  led.h.B4ED327890512C51.idx  led.h.B817A2E4F9B0BF09.idx  main.c.6FBF76BDEEF610F2.idx  mlx90640_i2c_adapter.c.0D0DCD32471434D1.idx  mock_thermal.c.1759545734364B25.idx  mock_thermal.h.A3C6D7969D101B2E.idx  quantization.c.015A5ED2C52CCE44.idx  quantization.h.81930D28F4DEECAF.idx  serial.c.9739CC32710190E2.idx  serial.c.BA7FC0B9796F829C.idx  serial.h.5422F7CCE5022356.idx  serial.h.919F5731E4DB4115.idx  thermal_packet.c.6CA8FFDDC8F50F9A.idx  thermal_packet.h.DF77E5DF24D4798A.idx  uart.c.0CFB8BB072419638.idx  uart.h.F8F79E706ECC1BA8.idx  udp_sender.c.430B20B3A2B1040C.idx  udp_sender.h.9DDABE2AE0665EAF.idx  wifi_sta.c.59BC79824801E963.idx  wifi_sta.h.42510F3411572ACA.idx
firmware/hello_board/main/: CMakeLists.txt  main.c
firmware/hello_board/main/camera/: MLX90640_API.c  MLX90640_API.h  MLX90640_I2C_Driver.h  camera_i2c.c  camera_i2c.h  mlx90640_i2c_adapter.c  mlx90640_runtime.c  mlx90640_runtime.h
firmware/hello_board/main/led/: led.h
firmware/hello_board/main/network/: handshake_broadcaster.c  handshake_broadcaster.h  stream_control.c  stream_control.h  tcp_command_server.c  tcp_command_server.h  udp_sender.c  udp_sender.h
firmware/hello_board/main/protocol/: command_packet.c  command_packet.h  handshake_packet.c  handshake_packet.h  thermal_packet.c  thermal_packet.h
firmware/hello_board/main/serial/: serial.c  serial.h
firmware/hello_board/main/utils/: quantization.c  quantization.h  refresh_rate.c  refresh_rate.h
firmware/hello_board/main/wifi/: wifi_sta.c  wifi_sta.h
journals/: 01_Init_serial_interface.md  02_new_interface.md
receiver_python/: discover_stream.py  image_blur_subtract.py  listener.py  pyproject.toml  script.py  stream.py
viewer/: CMakeLists.txt  Main.qml  main.cpp
viewer/analysis/: frame_statistics.h  frame_statistics_calculator.cpp  frame_statistics_calculator.h  frame_timing_statistics.h  frame_timing_tracker.cpp  frame_timing_tracker.h  receiver_statistics.h  receiver_statistics_tracker.cpp  receiver_statistics_tracker.h
viewer/detector/: hotspot.h  hotspot_detector.cpp  hotspot_detector.h  hotspot_settings.h  thermal_frame_constants.h
viewer/image/: thermal_image_provider.cpp  thermal_image_provider.h
viewer/models/: frame_model.cpp  frame_model.h  log_model.cpp  log_model.h
viewer/network/: handshake_receiver.cpp  handshake_receiver.h  tcp_command_client.cpp  tcp_command_client.h  udp_receiver.cpp  udp_receiver.h
viewer/protocol/: command_packet.cpp  command_packet.h  handshake_packet.cpp  handshake_packet.h  packet_decoder.cpp  packet_decoder.h  thermal_frame.h  thermal_quantization.h
viewer/qml/: HeaderBar.qml  HotSpotStats.qml  RawRollingSwitch.qml  StatisticsPanel.qml  TemperatureGraph.qml  ThermalPanel.qml  TimingPanel.qml
viewer/timeseries/: thermal_time_series_sample.h  time_series_recorder.cpp  time_series_recorder.h
